# ViewerOBJ_1

./: CMakeLists.txt  custom_shape_creator.py  main.cpp  mainwindow.cpp  mainwindow.h  model.cpp  model.h  modelviewer.cpp  modelviewer.h  viewer.cpp  viewer.h  Библиотеки, классы и функции.docx  Вопросы по расчетам плоскости проекции модели.docx  Доработать в программе.docx  Код программы с комментариями.docx  Код программы.txt  Описание программы_библиотеки_классы_функции_методы.docx  Описание формул.docx  Структура программы.docx  Формулы.docx  структура программы.txt  угловые вершины.txt
shaders/: fragment.glsl  vertex.glsl
src/: main.cpp  model.cpp  model.h  viewer.cpp  viewer.h
